Attempting Input Not ready to deploy

--- a/public/css/my_custom.css
+++ b/public/css/my_custom.css
@@ -26,11 +26,6 @@ figure figcaption {
 	height: 200px;
 	width: 200px;
 }
-.portfolio {
-	padding:0 !important;
-	margin:0 !important;
-	display:block;
-}
 .modal-style {
 	font-family: sans-serif;
 }
@@ -40,13 +35,12 @@ figure figcaption {
 .modal-body {
 	font-family: ‘Trebuchet MS’, Helvetica, sans-serif;
 }
+.input-group-addon{
+	background-color: blue;
+}
 
-.portfolio-item .title:before {border-radius:0; display:none}
-.portfolio-item p {margin:0px 0 30px;}
-.portfolio-item h3 {margin:-10px 0 10px; font-size:16px; text-transform:uppercase;}
 
-
-.tpl6 h3
+/*.tpl6 h3
 {
 	color:#fff;
 	margin:0;
@@ -201,4 +195,4 @@ figure figcaption {
 	-moz-animation-delay: 1.4s;
 	-o-animation-delay: 1.4s;
 	animation-delay: 1.4s;
-}
+}*/
