--- a/public/css/bootstrap.css
+++ b/public/css/bootstrap.css
@@ -1857,7 +1857,7 @@ select[multiple].input-lg {
   box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 6px #ffffff;
 }
 .has-success .input-group-addon {
-  color: #ffffff;
+  color: #input-group;
   border-color: #ffffff;
   background-color: #18bc9c;
 }
@@ -1883,7 +1883,7 @@ select[multiple].input-lg {
   box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 6px #ffffff;
 }
 .has-warning .input-group-addon {
-  color: #ffffff;
+  color: #form-control-feedback;
   border-color: #ffffff;
   background-color: #f39c12;
 }
